:bug: Align even dots with timeline

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  
+
   height: 110vh;
 }
 #hero::after {
@@ -257,7 +257,7 @@
   #how-it-works .swiper-slide:nth-of-type(even) svg { margin-top: 28px; }
   #how-it-works .swiper-slide:nth-of-type(even) h2 { top: -8px; }
   /*#how-it-works .swiper-slide:nth-of-type(odd) h2::before { bottom: -56px; }*/
-  #how-it-works .swiper-slide:nth-of-type(even) h2::before { top: -20px; }
+  #how-it-works .swiper-slide:nth-of-type(even) h2::before { top: -24px; }
   #how-it-works .swiper-slide:nth-of-type(odd) h2::after { bottom: -56px; }
   #how-it-works .swiper-slide:nth-of-type(even) h2::after { top: -56px; }
 }
